--- a/style.css
+++ b/style.css
@@ -8,3 +8,44 @@ body{
     padding:0;
     overflow: hidden;
 }
+
+.canvas-select-menu{
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+
+    position: absolute;
+    top:20px;
+    left:10px;
+
+    width:300px;
+    height:60px;
+
+    padding:10px;
+
+    background-color: rgba(30, 30, 40, 0.9);
+    border-radius: 5px;
+
+    box-shadow: 3px 3px 5px 0px rgba(30, 30, 40, 0.6);
+
+    z-index:10;
+
+}
+
+.canvas-select-menu button{
+    color:#aaa;
+
+    background-color: transparent;
+    border:0;
+    outline:0;
+
+    font-size:1.2rem;
+    font-weight: 700;
+
+    transition: 0.2s;
+}
+
+.canvas-select-menu button:hover{
+    color:#fff;
+
+}
